[package]
name = "zim2waj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
indicatif = "0.17.3"
jbk = { git = "https://github.com/jubako/jubako.git", package="jubako", version="0.3.0-dev" }
zim-rs = { path = "../zim-rs" }
waj = { git = "https://github.com/jubako/waj.git", package="libwaj", version="0.2.0" }
tempfile = "3.7.0"
mime_guess = "2.0.4"
env_logger = "0.10.0"
indicatif-log-bridge = "0.2.2"
log = "0.4.20"
